@@ -14,8 +14,13 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.junit.platform:junit-platform-gradle-plugin:1.1.0"
-        classpath "org.openjfx:javafx-plugin:0.0.7"
+        classpath 'edu.sc.seis.gradle:launch4j:2.4.6'
+        classpath 'org.openjfx:javafx:14.0.+'
+        classpath "com.github.jengelman.gradle.plugins:shadow:6.0.0"
+        classpath "org.openjfx:javafx-plugin:0.0.8"
+        classpath "org.beryx:badass-jlink-plugin:2.20.0"
     }
+
 }
 
 apply plugin: "java"
@@ -24,19 +29,36 @@ apply plugin: "application"
 apply plugin: "org.junit.platform.gradle.plugin"
 apply plugin: 'org.openjfx.javafxplugin'
 apply plugin: 'org.jetbrains.kotlin.jvm'
+apply plugin: 'edu.sc.seis.launch4j'
+apply plugin: "com.github.johnrengelman.shadow"
+apply plugin: 'org.beryx.jlink'
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
 applicationDefaultJvmArgs = [
+        "--add-modules javafx.controls,javafx.fxml",
         "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
         "--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED"
 ]
 
+application{
+    mainClassName = "com.example.demo.app.MainKt"
+}
+
 javafx {
     version = "14"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base', 'javafx.media']
+    configuration = "compileOnly"
+}
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher{
+        name = 'jfk keys'
+        jvmArgs = ['-Dlog4j.configurationFile=./log4j2.xml']
+    }
 }
 
 repositories {
@@ -59,6 +81,7 @@ dependencies {
     compile 'no.tornado:tornadofx-controlsfx:0.1'
     compile group: 'net.java.openjfx.backport', name: 'openjfx-78-backport-compat', version: '1.8.0.1'
     compile group: 'de.jensd', name: 'fontawesomefx-icons525', version: '4.2.0-9.1.2'
+    compile 'org.openjfx:javafx:14.0.+'
 
     compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
 
@@ -69,7 +92,12 @@ dependencies {
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junit_version"
 }
 
-mainClassName = "com.example.demo.app.MyApp"
+mainClassName = "com.example.demo.app.MainKt"
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 jar {
     manifest {
@@ -78,10 +106,28 @@ jar {
                 "Main-Class": mainClassName
         )
     }
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
     from(configurations.compile.collect { entry -> zipTree(entry) }) {
         exclude "META-INF/MANIFEST.MF"
         exclude "META-INF/*.SF"
         exclude "META-INF/*.DSA"
         exclude "META-INF/*.RSA"
     }
+}
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+    archiveClassifier = "all"
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
+}
+
+launch4j {
+    mainClassName = "com.example.demo.app.MainKt"
+//    icon = "${projectDir}/icons/myApp.ico"
 }
